Rename Release to Publication and add service release SDK types (#29)