@@ -1,9 +1,7 @@
 package com.konfigyr.artifactory;
 
-import org.jspecify.annotations.NonNull;
-
+import java.io.Serial;
 import java.time.Instant;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -11,17 +9,30 @@ import java.util.List;
  *
  * @param id        the unique identifier of the {@code Service} this manifest belongs to, can't be {@literal null}.
  * @param name      the name of the {@code Service} this manifest belongs to, can't be {@literal null}.
- * @param artifacts list of artifacts that belong to this manifest, can't be {@literal null}.
+ * @param artifacts list of manifest entries that belong to this manifest, can't be {@literal null}.
  * @param createdAt timestamp when this manifest was created, can't be {@literal null}.
  * @author Vladimir Spasic
  * @since 1.0.0
  */
 public record DefaultManifest(
-		@NonNull String id,
-		@NonNull String name,
-		@NonNull List<Artifact> artifacts,
-		@NonNull Instant createdAt
+		String id,
+		String name,
+		List<ManifestEntry> artifacts,
+		Instant createdAt
 ) implements Manifest {
+
+	@Serial
+	private static final long serialVersionUID = 9038022062672153532L;
+
+	/**
+	 * Validates this {@link Manifest}, mirroring the checks performed by {@link ManifestBuilder#validate()},
+	 * so that the invariant holds regardless of whether this record is constructed via the {@link Builder}
+	 * or directly.
+	 */
+	public DefaultManifest {
+		id = Asserts.notBlank(id, "Service identifier can not be blank");
+		name = Asserts.notBlank(name, "Service name can not be blank");
+	}
 
 	/**
 	 * Builder class used to create new instances of the {@link DefaultManifest}.
@@ -37,22 +48,11 @@ public record DefaultManifest(
 		 *
 		 * @return service artifact manifest, never {@literal null}.
 		 */
-		@NonNull
 		@Override
-		public DefaultManifest build() {
-			if (id == null || id.isBlank()) {
-				throw new IllegalArgumentException("Service identifier can not be blank");
-			}
-			if (name == null || name.isBlank()) {
-				throw new IllegalArgumentException("Service name can not be blank");
-			}
-			if (createdAt == null) {
-				createdAt = Instant.now();
-			}
-
+		protected DefaultManifest instantiate() {
 			artifacts.sort(Artifact::compareTo);
 
-			return new DefaultManifest(id, name, Collections.unmodifiableList(artifacts), createdAt);
+			return new DefaultManifest(id, name, List.copyOf(artifacts), createdAt);
 		}
 
 	}
